<resources>
    <string name="app_name">AC-TwitterClone</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <!--<string name="back4app_app_id">[APP_ID]</string>-->
    <!--<string name="back4app_client_key">[CLIENT_KEY]</string>-->

    <!-- Generic strings -->
    <string name="generic_username">Username</string>
    <string name="generic_password">Password</string>
    <string name="generic_toast_error">Something went wrong…</string>
    <string name="generic_logout">Logout</string>
    <string name="generic_send">Send</string>

    <!-- LoginActivity -->
    <string name="btn_activity_login_login">Login</string>
    <string name="btn_activity_login_need_account">I need to sign up!</string>
    <string name="hint_activity_login_edt_username">Username or E-mail address</string>
    <string name="toast_activity_login_login_success">%s logged in successfully!</string>
    <string name="toast_activity_login_login_invalid">Those credentials do not match our records…</string>

    <!-- SignUpActivity -->
    <string name="switch_activity_sign_up_fan_of_false">This user will use Follower-class</string>
    <string name="switch_activity_sign_up_fan_of_true">This user will use fanOf-array</string>
    <string name="hint_activity_sign_up_edt_username">Enter a username</string>
    <string name="hint_activity_sign_up_edt_email">Enter an e-mail address</string>
    <string name="hint_activity_sign_up_edt_password">Choose your password</string>
    <string name="hint_activity_sign_up_edt_password_confirm">Confirm your password</string>
    <string name="btn_activity_sign_up_sign_up">Sign Up</string>
    <string name="btn_activity_sign_up_have_account">I already have an account!</string>
    <string name="toast_activity_sign_up_objection_string_start">Please address the following:\n</string>
    <string name="toast_activity_sign_up_objection_string_username">You must supply a username.\n</string>
    <string name="toast_activity_sign_up_objection_string_email">You must supply a valid email.\n</string>
    <string name="toast_activity_sign_up_objection_string_password">You must choose a password and confirm it.</string>
    <string name="toast_activity_sign_up_objection_string_password_confirm">Confirmed password must match chosen password.</string>
    <string name="toast_activity_sign_up_sign_up_success">%s signed up successfully!</string>
    <string name="toast_activity_sign_up_sign_up_error_username">The username %s is already in use…</string>

    <!-- TwitterUsersActivity -->
    <string name="txt_activity_twitter_users_loading">Loading…</string>
    <string name="menu_item_activity_twitter_users_current_user">User: %s</string>
    <string name="menu_item_activity_twitter_users_current_user_default">User: username</string>
    <string name="menu_item_activity_twitter_users_following_mode_follower_class">Using: Follower class</string>
    <string name="menu_item_activity_twitter_users_following_mode_fan_of_array">Using: fanOf array</string>
    <string name="menu_item_activity_twitter_users_following_mode_default">Using: Following mode</string>
    <string name="toast_activity_twitter_users_no_users">No users…</string>
    <string name="toast_activity_twitter_users_follow_success">%s followed successfully</string>
    <string name="toast_activity_twitter_users_un_follow_success">%s un-followed successfully</string>

    <!-- TweetActivity -->
    <string name="hint_activity_tweet_edt_tweet">Type tweet here</string>
    <string name="hint_activity_tweet_btn_tweet">Tweet</string>
    <string name="toast_activity_tweet_tweet_too_short">Tweets must be longer than 1 character and can\'t be all white-space…</string>
    <string name="toast_activity_tweet_tweet_success">Tweet posted successfully!</string>
    <string name="btn_activity_tweet_tweet">Tweet</string>
    <string name="btn_activity_tweet_refresh">Refresh</string>
    <string name="btn_activity_tweet_mode_use_hashmaps">Use HashMaps</string>
    <string name="btn_activity_tweet_mode_use_display_tweet">Use DisplayTweet-class</string>
    <string name="txt_activity_tweet_current_user_tweets">Your tweets: </string>
    <string name="txt_activity_tweet_followed_user_tweets">Tweets from users you follow: </string>

</resources>
