<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemTwitterUsersCurrentUser"
        android:enabled="false"
        android:title="@string/menu_item_activity_twitter_users_current_user_default"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemTwitterUsersFollowingMode"
        android:enabled="false"
        android:title="@string/menu_item_activity_twitter_users_following_mode_default" />
    <item
        android:id="@+id/menuItemTwitterUsersLogout"
        android:title="@string/generic_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemTwitterUsersSend"
        android:icon="@drawable/send"
        android:title="@string/generic_send"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemTwitterUsersTrough"
        android:icon="@drawable/notafeed"
        android:title="Trough"
        app:showAsAction="ifRoom"/>
</menu>